@@ -7,18 +7,15 @@ html_DATA=\
 compiling.html \
 configuration.html \
 debugging.html \
-dev-control-objects.html \
-dev-dsp-objects.html \
+classes.html \
+dsp-classes.html \
 explode.html \
 index.html \
 installing.html \
 patcher.html \
 project-package.html \
 ReleaseNotes.html \
-running.html \
-server-kernel-api.html 
-
-
+running.html
 
 EXTRA_DIST=$(html_DATA)
 
